Added method to get icon of a folder and integrated it to WFileIcon.pas Added class WImage.pas to display an image New INI setting: DocumentsPath By default, the special folders (Documents, Music, etc.) are now also displayed in the bar. Added support for icon dividers in Main.pas and MainForm.pas
git-svn-id: https://appetizer.googlecode.com/svn@37 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/Perso/MiniLaunchBar/Développement/Data/Settings/Config.ini
+++ b/Perso/MiniLaunchBar/Développement/Data/Settings/Config.ini
@@ -1,2 +1,3 @@
 [Global]
-PortableAppsPath=d:\temp\Clef USB\PortableApps SMALL
+PortableAppsPath=d:\temp\test portableapp\PortableApps
+DocumentsPath=d:\temp\test portableapp\Documents
