- Started implementing main frame - Imported Data folder from old app
git-svn-id: https://appetizer.googlecode.com/svn@92 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -232,11 +232,19 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\ImagePanel.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Imaging.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\main.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MainFrame.cpp"
 				>
 			</File>
 			<File
@@ -250,7 +258,19 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\Constants.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ImagePanel.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Imaging.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MainFrame.h"
 				>
 			</File>
 			<File
