- Implemented BitmapControlInterface, which should make it easier to draw custom alpha-transparent controls. - Removed "Hello World" code from main.cpp
git-svn-id: https://appetizer.googlecode.com/svn@93 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -251,12 +251,20 @@
 				RelativePath=".\NineSlicesPainter.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\NineSlicesPanel.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\BitmapControlInterface.h"
+				>
+			</File>
 			<File
 				RelativePath=".\Constants.h"
 				>
@@ -275,6 +283,10 @@
 			</File>
 			<File
 				RelativePath=".\NineSlicesPainter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\NineSlicesPanel.h"
 				>
 			</File>
 		</Filter>
