- Renamed private variables from pPrivateVar to privateVar_ - Changed the way the styles are stored since the previous method was too complex, not type-safe, and probably too slow - Created data folder structure in Controller.cpp - Created User class
git-svn-id: https://appetizer.googlecode.com/svn@100 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -251,6 +251,10 @@
 				RelativePath=".\StyleSelector.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\User.cpp"
+				>
+			</File>
 			<Filter
 				Name="BitmapControls"
 				>
@@ -303,6 +307,10 @@
 			</File>
 			<File
 				RelativePath=".\StyleSelector.h"
+				>
+			</File>
+			<File
+				RelativePath=".\User.h"
 				>
 			</File>
 			<Filter
