--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -181,9 +181,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				Optimization="0"
 				AdditionalIncludeDirectories="&quot;C:\wxWidgets-2.8.8\include&quot;;&quot;C:\wxWidgets-2.8.8\lib\vc_lib\mswud&quot;"
 				PreprocessorDefinitions="WINVER=0x0400;wxUSE_GUI=1;__WXDEBUG__"
 				RuntimeLibrary="3"
+				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -198,6 +200,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.8\lib\vc_lib&quot;"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 			/>
 			<Tool
@@ -283,6 +286,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="utilities"
+				>
+				<File
+					RelativePath=".\utilities\IconGetter.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="third_party"
+				>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -338,6 +353,22 @@
 				</File>
 				<File
 					RelativePath=".\NineSlicesPainter.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="utilities"
+				>
+				<File
+					RelativePath=".\utilities\IconGetter.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="third_party"
+				>
+				<File
+					RelativePath=".\third_party\simpleini\SimpleIni.h"
 					>
 				</File>
 			</Filter>
