--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -159,7 +159,7 @@
 		</Configuration>
 		<Configuration
 			Name="Unicode Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)_$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
@@ -198,7 +198,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib"
+				AdditionalDependencies="comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib wxbase28ud_xml.lib"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.8\lib\vc_lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -236,6 +236,14 @@
 			>
 			<File
 				RelativePath=".\Controller.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\FolderItem.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\FolderItemRenderer.cpp"
 				>
 			</File>
 			<File
@@ -313,6 +321,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\FolderItem.h"
+				>
+			</File>
+			<File
+				RelativePath=".\FolderItemRenderer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\IconPanel.h"
 				>
 			</File>
@@ -372,12 +388,6 @@
 					>
 				</File>
 			</Filter>
-		</Filter>
-		<Filter
-			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
-			>
 		</Filter>
 	</Files>
 	<Globals>
