--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -160,7 +160,7 @@
 		<Configuration
 			Name="Unicode Debug|Win32"
 			OutputDirectory="$(SolutionDir)_$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="_$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			>
@@ -198,7 +198,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib wxbase28ud_xml.lib"
+				AdditionalDependencies="comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.8\lib\vc_lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -259,11 +259,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\StyleSelector.cpp"
+				RelativePath=".\User.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\User.cpp"
+				RelativePath=".\UserSettings.cpp"
 				>
 			</File>
 			<Filter
@@ -337,11 +337,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\StyleSelector.h"
+				RelativePath=".\User.h"
 				>
 			</File>
 			<File
-				RelativePath=".\User.h"
+				RelativePath=".\UserSettings.h"
 				>
 			</File>
 			<Filter
