--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -182,7 +182,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;C:\wxWidgets-2.8.8\include&quot;;&quot;C:\wxWidgets-2.8.8\lib\vc_lib\mswud&quot;"
+				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\lib\vc_lib\mswud&quot;"
 				PreprocessorDefinitions="WINVER=0x0400;wxUSE_GUI=1;__WXDEBUG__"
 				RuntimeLibrary="3"
 				DebugInformationFormat="4"
@@ -199,7 +199,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib"
-				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.8\lib\vc_lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 			/>
@@ -301,6 +301,10 @@
 					RelativePath=".\utilities\IconGetter.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\utilities\MathUtil.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="third_party"
@@ -377,6 +381,10 @@
 				>
 				<File
 					RelativePath=".\utilities\IconGetter.h"
+					>
+				</File>
+				<File
+					RelativePath=".\utilities\MathUtil.h"
 					>
 				</File>
 			</Filter>
