- FolderItems are now only referenced by ID in FolderItemRenderer and Controller so as to avoid dangling pointers. - Implemented IconPanel::InvalidateIcons() which delays the diplay of icons till the next Paint event. - Implemented saving and loading of FolderItems (to a .ini file for now since wxWidgets XML implementation is going to change in version 3.0) - Added StringUtil class
git-svn-id: https://appetizer.googlecode.com/svn@113 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -305,6 +305,10 @@
 					RelativePath=".\utilities\MathUtil.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\utilities\StringUtil.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="third_party"
@@ -385,6 +389,10 @@
 				</File>
 				<File
 					RelativePath=".\utilities\MathUtil.h"
+					>
+				</File>
+				<File
+					RelativePath=".\utilities\StringUtil.h"
 					>
 				</File>
 			</Filter>
