- Finished converting all pointers to smart pointers.  Haven't changed pointers to wxWidgets objects since they are usually owned by the framework.
git-svn-id: https://appetizer.googlecode.com/svn@115 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -345,6 +345,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\TypeDefinitions.h"
+				>
+			</File>
+			<File
 				RelativePath=".\User.h"
 				>
 			</File>
