- Started creating Shortcut editor window using wxGlade
git-svn-id: https://appetizer.googlecode.com/svn@116 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -314,6 +314,18 @@
 				Name="third_party"
 				>
 			</Filter>
+			<Filter
+				Name="gui"
+				>
+				<File
+					RelativePath=".\gui\ShortcutEditorFrame.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\ShortcutEditorFrameBase.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -405,6 +417,18 @@
 				>
 				<File
 					RelativePath=".\third_party\simpleini\SimpleIni.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="gui"
+				>
+				<File
+					RelativePath=".\gui\ShortcutEditorFrame.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\ShortcutEditorFrameBase.h"
 					>
 				</File>
 			</Filter>
