- Converted "EditFolderItem" frame by a dialog - Implemented icon context menu
git-svn-id: https://appetizer.googlecode.com/svn@117 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -318,11 +318,11 @@
 				Name="gui"
 				>
 				<File
-					RelativePath=".\gui\ShortcutEditorFrame.cpp"
+					RelativePath=".\gui\ShortcutEditorDialog.cpp"
 					>
 				</File>
 				<File
-					RelativePath=".\gui\ShortcutEditorFrameBase.cpp"
+					RelativePath=".\gui\ShortcutEditorDialogBase.cpp"
 					>
 				</File>
 			</Filter>
@@ -424,11 +424,11 @@
 				Name="gui"
 				>
 				<File
-					RelativePath=".\gui\ShortcutEditorFrame.h"
+					RelativePath=".\gui\ShortcutEditorDialog.h"
 					>
 				</File>
 				<File
-					RelativePath=".\gui\ShortcutEditorFrameBase.h"
+					RelativePath=".\gui\ShortcutEditorDialogBase.h"
 					>
 				</File>
 			</Filter>
