- Started implementing ShortcutEditorDialog - Assignment of control IDs is now done in wxGlade - Created DelphiTools.dll, which will contain functions from the original MiniLaunchBar. In particular, functions that are too complex to implement without the STL.
git-svn-id: https://appetizer.googlecode.com/svn@119 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -298,6 +298,10 @@
 				Name="utilities"
 				>
 				<File
+					RelativePath=".\utilities\DelphiToolsInterface.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\utilities\IconGetter.cpp"
 					>
 				</File>
@@ -399,6 +403,10 @@
 			<Filter
 				Name="utilities"
 				>
+				<File
+					RelativePath=".\utilities\DelphiToolsInterface.h"
+					>
+				</File>
 				<File
 					RelativePath=".\utilities\IconGetter.h"
 					>
