- Finished ShortcutEditorDialog - Started Option panel - The main frame can now be resized from its corner - Folder items can automatically take their name from the FileDescription field
git-svn-id: https://appetizer.googlecode.com/svn@120 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -259,6 +259,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\OptionFrame.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\User.cpp"
 				>
 			</File>
@@ -358,6 +362,10 @@
 			</File>
 			<File
 				RelativePath=".\MainFrame.h"
+				>
+			</File>
+			<File
+				RelativePath=".\OptionFrame.h"
 				>
 			</File>
 			<File
