- Started ImageButton class - Added arrow button to OptionPanel and implemented mask - Implemented SetGrid function in NineSlicesPainter
git-svn-id: https://appetizer.googlecode.com/svn@122 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -278,6 +278,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\bitmap_controls\ImageButton.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\bitmap_controls\ImagePanel.cpp"
 					>
 				</File>
@@ -385,6 +389,10 @@
 				>
 				<File
 					RelativePath=".\bitmap_controls\BitmapControl.h"
+					>
+				</File>
+				<File
+					RelativePath=".\bitmap_controls\ImageButton.h"
 					>
 				</File>
 				<File
