- Started OptionPanel - Finished option panel animation
git-svn-id: https://appetizer.googlecode.com/svn@125 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -259,6 +259,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\OptionPanel.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\User.cpp"
 				>
 			</File>
@@ -362,6 +366,10 @@
 			</File>
 			<File
 				RelativePath=".\MainFrame.h"
+				>
+			</File>
+			<File
+				RelativePath=".\OptionPanel.h"
 				>
 			</File>
 			<File
