--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -259,6 +259,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\OptionButton.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\OptionPanel.cpp"
 				>
 			</File>
@@ -366,6 +370,10 @@
 			</File>
 			<File
 				RelativePath=".\MainFrame.h"
+				>
+			</File>
+			<File
+				RelativePath=".\OptionButton.h"
 				>
 			</File>
 			<File
