--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\FilePaths.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\FolderItem.cpp"
 				>
 			</File>
@@ -264,6 +268,10 @@
 			</File>
 			<File
 				RelativePath=".\OptionPanel.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Styles.cpp"
 				>
 			</File>
 			<File
@@ -357,6 +365,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\FilePaths.h"
+				>
+			</File>
+			<File
 				RelativePath=".\FolderItem.h"
 				>
 			</File>
@@ -378,6 +390,10 @@
 			</File>
 			<File
 				RelativePath=".\OptionPanel.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Styles.h"
 				>
 			</File>
 			<File
