--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -198,7 +198,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib"
+				AdditionalDependencies="comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib wxmsw28ud_adv.lib"
 				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -235,6 +235,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\ApplicationTrayIcon.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Controller.cpp"
 				>
 			</File>
@@ -260,6 +264,10 @@
 			</File>
 			<File
 				RelativePath=".\MainFrame.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MessageBoxes.cpp"
 				>
 			</File>
 			<File
@@ -333,10 +341,30 @@
 					RelativePath=".\utilities\StringUtil.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\utilities\XmlUtil.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="third_party"
 				>
+				<File
+					RelativePath=".\third_party\tinyxml\tinystr.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\third_party\tinyxml\tinyxml.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\third_party\tinyxml\tinyxmlerror.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\third_party\tinyxml\tinyxmlparser.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="gui"
@@ -357,11 +385,19 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\ApplicationTrayIcon.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Constants.h"
 				>
 			</File>
 			<File
 				RelativePath=".\Controller.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Enumerations.h"
 				>
 			</File>
 			<File
@@ -382,6 +418,10 @@
 			</File>
 			<File
 				RelativePath=".\MainFrame.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MessageBoxes.h"
 				>
 			</File>
 			<File
@@ -459,12 +499,24 @@
 					RelativePath=".\utilities\StringUtil.h"
 					>
 				</File>
+				<File
+					RelativePath=".\utilities\XmlUtil.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="third_party"
 				>
 				<File
 					RelativePath=".\third_party\simpleini\SimpleIni.h"
+					>
+				</File>
+				<File
+					RelativePath=".\third_party\tinyxml\tinystr.h"
+					>
+				</File>
+				<File
+					RelativePath=".\third_party\tinyxml\tinyxml.h"
 					>
 				</File>
 			</Filter>
