- ImageButton: done enabled / disabled state - FolderItem: done multi-launch group - User: Implemented excluded folder items - Done localization class - Implemented IconPanel browse button - The main frame now saves its own size and location - Fixed IconGetter bug where a 32x32 icon was always returned for executables and documents
git-svn-id: https://appetizer.googlecode.com/svn@131 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -166,7 +166,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Generates version info and increments build number"
+				Description="Generating version info and incrementing build number..."
 				CommandLine="resources\\CreateResources.exe"
 			/>
 			<Tool
@@ -331,6 +331,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Localization.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
@@ -486,6 +490,10 @@
 			</File>
 			<File
 				RelativePath=".\IconPanel.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Localization.h"
 				>
 			</File>
 			<File
