- Started config dialog: implemented support for icon size and language properties - Converted all locale files to UTF-8 (No BOM). Note that wxWidgets doesn't handle UTF files with BOM properly since it doesn't skip the first three bytes at the beginning of the file. - Added tooltips to option buttons and icons. Using wxWidgets built-in tooltips for now. - Fixed a bug in Localization class which was preventing it from defaulting to english when a string couldn't be find. - Added Localize() functions to all the objects that support localization
git-svn-id: https://appetizer.googlecode.com/svn@136 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -237,6 +237,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Generating version info and incrementing build number..."
+				CommandLine="resources\\CreateResources.exe"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -263,6 +265,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
+				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -446,6 +449,14 @@
 				Name="gui"
 				>
 				<File
+					RelativePath=".\gui\ConfigDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\ConfigDialogBase.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\gui\ShortcutEditorDialog.cpp"
 					>
 				</File>
@@ -603,6 +614,14 @@
 			<Filter
 				Name="gui"
 				>
+				<File
+					RelativePath=".\gui\ConfigDialog.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\ConfigDialogBase.h"
+					>
+				</File>
 				<File
 					RelativePath=".\gui\ShortcutEditorDialog.h"
 					>
