- Implemented GetFileDescription and moved this function and GetFileVersion to VersionInfo class - Removed DelphiTools dependency - Eject button is now only visible if the dock is on a removable drive - Skin folder is now a user setting to allow for new skins
git-svn-id: https://appetizer.googlecode.com/svn@149 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -405,10 +405,6 @@
 				Name="utilities"
 				>
 				<File
-					RelativePath=".\utilities\DelphiToolsInterface.cpp"
-					>
-				</File>
-				<File
 					RelativePath=".\utilities\IconGetter.cpp"
 					>
 				</File>
@@ -418,6 +414,10 @@
 				</File>
 				<File
 					RelativePath=".\utilities\StringUtil.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\utilities\VersionInfo.cpp"
 					>
 				</File>
 				<File
@@ -583,10 +583,6 @@
 				Name="utilities"
 				>
 				<File
-					RelativePath=".\utilities\DelphiToolsInterface.h"
-					>
-				</File>
-				<File
 					RelativePath=".\utilities\IconGetter.h"
 					>
 				</File>
@@ -596,6 +592,10 @@
 				</File>
 				<File
 					RelativePath=".\utilities\StringUtil.h"
+					>
+				</File>
+				<File
+					RelativePath=".\utilities\VersionInfo.h"
 					>
 				</File>
 				<File
