- Added custom log functions - Fixed annoying warning when a bitmap control has a width or height of 0 - Folder items can now be launched with arguments (FolderItem::LaunchWithArguments) - Added thunder icon over icons that are part of the multilaunch group - It's now possible to add a folder item by drag & dropping a file on the bar - It's also possible to drop a file on an icon - Added User::AddNewFolderItemFromPath
git-svn-id: https://appetizer.googlecode.com/svn@154 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -338,6 +338,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Log.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
@@ -517,6 +521,10 @@
 			</File>
 			<File
 				RelativePath=".\Localization.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Log.h"
 				>
 			</File>
 			<File
