- FolderItem, FolderItemRenderer and IconPanel classes: added support for sub-folder items - Added support for multiple skins - Created IconPanelFrame which might be used to create sub-menus - Bar is now rotated to the left rather than to the right in vertical mode - Added close and help buttons to the side of the dock
git-svn-id: https://appetizer.googlecode.com/svn@155 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -334,6 +334,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\IconPanelFrame.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Localization.cpp"
 				>
 			</File>
@@ -517,6 +521,10 @@
 			</File>
 			<File
 				RelativePath=".\IconPanel.h"
+				>
+			</File>
+			<File
+				RelativePath=".\IconPanelFrame.h"
 				>
 			</File>
 			<File
