- Started TreeViewDialog to allow editing sub-menus
git-svn-id: https://appetizer.googlecode.com/svn@157 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -484,6 +484,14 @@
 					RelativePath=".\gui\ShortcutEditorDialogBase.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\gui\TreeViewDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\TreeViewDialogBase.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -668,6 +676,14 @@
 				</File>
 				<File
 					RelativePath=".\gui\ShortcutEditorDialogBase.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\TreeViewDialog.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\TreeViewDialogBase.h"
 					>
 				</File>
 			</Filter>
