--- a/trunk/resources/resources_template.rc
+++ b/trunk/resources/resources_template.rc
@@ -20,12 +20,12 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "Comments", "A portable dock for your applications.\0"
-            VALUE "CompanyName", "MiniLaunchBar Project\0"
+            VALUE "CompanyName", "Appetizer Project\0"
             VALUE "FileDescription", "Mini Launch Bar\0"
             VALUE "FileVersion", "____VERSION____"
-            VALUE "InternalName", "MiniLaunchBar\0"
+            VALUE "InternalName", "Appetizer\0"
             VALUE "LegalCopyright", "Copyright (C) 2008 Laurent Cozic\0"
-            VALUE "OriginalFilename", "MiniLaunchBar.exe\0"
+            VALUE "OriginalFilename", "Appetizer.exe\0"
             VALUE "ProductName", "Mini Launch Bar\0"
             VALUE "ProductVersion", "____VERSION____"
         END
