- Updated application icon (16x16) and (48x48) - Added link to about dialog - Fixed layout issue in ConfigDialog - MainFrame now destroys its windows properly on close
git-svn-id: https://appetizer.googlecode.com/svn@161 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/resources/resources_template.rc
+++ b/trunk/resources/resources_template.rc
@@ -21,12 +21,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "A portable dock for your applications.\0"
             VALUE "CompanyName", "Appetizer Project\0"
-            VALUE "FileDescription", "Mini Launch Bar\0"
+            VALUE "FileDescription", "Appetizer\0"
             VALUE "FileVersion", "____VERSION____"
             VALUE "InternalName", "Appetizer\0"
             VALUE "LegalCopyright", "Copyright (C) 2008 Laurent Cozic\0"
             VALUE "OriginalFilename", "Appetizer.exe\0"
-            VALUE "ProductName", "Mini Launch Bar\0"
+            VALUE "ProductName", "Appetizer\0"
             VALUE "ProductVersion", "____VERSION____"
         END
     END
