- Option panel is now automatically opened the first time the dock is launched - Removed help button from side of dock and replaced by eject button - Moved help button back to option panel - By default, the app now saves its settings in the "Data/Settings" folder. - Added -d parameters to set data folder path, and -u to automatically use the user data folder (c:\documents and settings...) - #ifdefed all Windows-specific code so that the project can be built in Linux - Created Utilities class
git-svn-id: https://appetizer.googlecode.com/svn@162 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -431,6 +431,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\utilities\Utilities.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\utilities\VersionInfo.cpp"
 					>
 				</File>
@@ -626,6 +630,10 @@
 				</File>
 				<File
 					RelativePath=".\utilities\Updater.h"
+					>
+				</File>
+				<File
+					RelativePath=".\utilities\Utilities.h"
 					>
 				</File>
 				<File
