--- a/trunk/GenerateHelp.vcproj
+++ b/trunk/GenerateHelp.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="MiniLaunchBar"
-	ProjectGUID="{9923859F-06F8-437D-BD38-A5C2767F7051}"
-	RootNamespace="MiniLaunchBar"
+	Name="GenerateHelp"
+	ProjectGUID="{D96EDDC3-12C7-481E-BCF7-6B31D0AE2FC2}"
+	RootNamespace="GenerateHelp"
 	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
@@ -60,6 +60,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28d_core.lib wxbase28d.lib"
+				OutputFile=".\$(ProjectName).exe"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.8\lib\vc_lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -202,7 +203,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib wxmsw28ud_adv.lib wxbase28ud_net.lib"
-				OutputFile=".\Appetizer-debug.exe"
+				OutputFile=".\GenerateHelp.exe"
 				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -312,198 +313,14 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\ApplicationTrayIcon.cpp"
+				RelativePath=".\generate_help\main.cpp"
 				>
 			</File>
-			<File
-				RelativePath=".\Controller.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\FilePaths.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\FolderItem.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\FolderItemRenderer.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\IconPanel.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\IconPanelFrame.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Localization.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Log.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\main.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\MainFrame.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\MessageBoxes.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\OptionButton.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\OptionPanel.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Styles.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\User.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\UserSettings.cpp"
-				>
-			</File>
-			<Filter
-				Name="bitmap_controls"
-				>
-				<File
-					RelativePath=".\bitmap_controls\BitmapControl.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\bitmap_controls\ImageButton.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\bitmap_controls\ImagePanel.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\bitmap_controls\NineSlicesPanel.cpp"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="imaging"
-				>
-				<File
-					RelativePath=".\imaging\Imaging.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\imaging\NineSlicesPainter.cpp"
-					>
-				</File>
-			</Filter>
 			<Filter
 				Name="utilities"
 				>
 				<File
-					RelativePath=".\utilities\IconGetter.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\MathUtil.cpp"
-					>
-				</File>
-				<File
 					RelativePath=".\utilities\StringUtil.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\Updater.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\Utilities.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\VersionInfo.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\XmlUtil.cpp"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="third_party"
-				>
-				<File
-					RelativePath=".\third_party\tinyxml\tinystr.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\third_party\tinyxml\tinyxml.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\third_party\tinyxml\tinyxmlerror.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\third_party\tinyxml\tinyxmlparser.cpp"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="gui"
-				>
-				<File
-					RelativePath=".\gui\AboutDialog.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\AboutDialogBase.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\ConfigDialog.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\ConfigDialogBase.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\GroupEditorDialog.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\GroupEditorDialogBase.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\ShortcutEditorDialog.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\ShortcutEditorDialogBase.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\TreeViewDialog.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\TreeViewDialogBase.cpp"
 					>
 				</File>
 			</Filter>
@@ -513,211 +330,15 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\ApplicationTrayIcon.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Constants.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Controller.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Enumerations.h"
-				>
-			</File>
-			<File
-				RelativePath=".\FilePaths.h"
-				>
-			</File>
-			<File
-				RelativePath=".\FolderItem.h"
-				>
-			</File>
-			<File
-				RelativePath=".\FolderItemRenderer.h"
-				>
-			</File>
-			<File
-				RelativePath=".\IconPanel.h"
-				>
-			</File>
-			<File
-				RelativePath=".\IconPanelFrame.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Localization.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Log.h"
-				>
-			</File>
-			<File
-				RelativePath=".\MainFrame.h"
-				>
-			</File>
-			<File
-				RelativePath=".\MessageBoxes.h"
-				>
-			</File>
-			<File
-				RelativePath=".\OptionButton.h"
-				>
-			</File>
-			<File
-				RelativePath=".\OptionPanel.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Styles.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TypeDefinitions.h"
-				>
-			</File>
-			<File
-				RelativePath=".\User.h"
-				>
-			</File>
-			<File
-				RelativePath=".\UserSettings.h"
-				>
-			</File>
-			<Filter
-				Name="bitmap_controls"
-				>
-				<File
-					RelativePath=".\bitmap_controls\BitmapControl.h"
-					>
-				</File>
-				<File
-					RelativePath=".\bitmap_controls\ImageButton.h"
-					>
-				</File>
-				<File
-					RelativePath=".\bitmap_controls\ImagePanel.h"
-					>
-				</File>
-				<File
-					RelativePath=".\bitmap_controls\NineSlicesPanel.h"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="imaging"
-				>
-				<File
-					RelativePath=".\imaging\Imaging.h"
-					>
-				</File>
-				<File
-					RelativePath=".\imaging\NineSlicesPainter.h"
-					>
-				</File>
-			</Filter>
 			<Filter
 				Name="utilities"
 				>
 				<File
-					RelativePath=".\utilities\IconGetter.h"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\MathUtil.h"
-					>
-				</File>
-				<File
 					RelativePath=".\utilities\StringUtil.h"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\Updater.h"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\Utilities.h"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\VersionInfo.h"
-					>
-				</File>
-				<File
-					RelativePath=".\utilities\XmlUtil.h"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="third_party"
-				>
-				<File
-					RelativePath=".\third_party\simpleini\SimpleIni.h"
-					>
-				</File>
-				<File
-					RelativePath=".\third_party\tinyxml\tinystr.h"
-					>
-				</File>
-				<File
-					RelativePath=".\third_party\tinyxml\tinyxml.h"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="gui"
-				>
-				<File
-					RelativePath=".\gui\AboutDialog.h"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\AboutDialogBase.h"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\ConfigDialog.h"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\ConfigDialogBase.h"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\GroupEditorDialog.h"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\GroupEditorDialogBase.h"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\ShortcutEditorDialog.h"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\ShortcutEditorDialogBase.h"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\TreeViewDialog.h"
-					>
-				</File>
-				<File
-					RelativePath=".\gui\TreeViewDialogBase.h"
 					>
 				</File>
 			</Filter>
 		</Filter>
-		<File
-			RelativePath=".\resources\resources.rc"
-			>
-		</File>
 	</Files>
 	<Globals>
 	</Globals>
