- Fixed memory leak in ImageButton. Icons weren't deleted properly - Fixed memory leak: User weren't being deleted on close - Added support for skin metadata (name, compatible version and author) - Added function to check if skin is compatible with current version of application - Added parameters in ShortcutEditorDialog - Auto-hide feature - "Always on top" feature - Support for some simple BBCode in help generator to allow for links and "strong" tags - Changes made in GroupEditorDialog are now saved - Possibility to select default icon in GroupEditorDialog - Implemented snapping - Confirmation dialog when ejecting drive - Added "Get support" link in help popup menu
git-svn-id: https://appetizer.googlecode.com/svn@173 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/GenerateHelp.vcproj
+++ b/trunk/GenerateHelp.vcproj
@@ -202,7 +202,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib wxmsw28ud_adv.lib wxbase28ud_net.lib"
+				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib wxmsw28ud_adv.lib wxbase28ud_net.lib wxregexud.lib"
 				OutputFile=".\GenerateHelp.exe"
 				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_lib&quot;"
 				GenerateDebugInformation="true"
