- ApplicationTrayIcon: Added Eject item to tray icon menu - ApplicationTrayIcon: Show / Hide item is now bold - Optimized BlueGlass skin files - Removed gCommandLine and made it a property of the wxApp - FolderIcon16/32.png, DefaultIcon16/32.png and FileIcon16.png are now optional skin files - FolderItemRenderer: Added ApplySkin method so that the icon skins are updated when switching skins - GenerateHelp: < > & and \ are now encoded as HTML entities - Added "One application instance only" option - ShortcutEditorDialog: Added tooltips to "select file" and "select folder" buttons - IconPanel: Improved drag & drop of icons when dropped icon is off bound - MessageBoxes: Message boxes are now parented to the main frame - Moved application class to MiniLaunchBar.h
git-svn-id: https://appetizer.googlecode.com/svn@174 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/GenerateHelp.vcproj
+++ b/trunk/GenerateHelp.vcproj
@@ -167,8 +167,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Generating version info and incrementing build number..."
-				CommandLine="resources\\CreateResources.exe"
+				Description=""
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -312,6 +312,10 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath=".\generate_help\HtmlEntities.h"
+				>
+			</File>
 			<File
 				RelativePath=".\generate_help\main.cpp"
 				>
