--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -566,6 +566,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MiniLaunchBar.h"
+				>
+			</File>
+			<File
 				RelativePath=".\OptionButton.h"
 				>
 			</File>
