- Removed gMainFrame and gUtilities and moved them to MiniLaunchBar class - TreeViewDialog: Added title and close button - OptionPanel: Fixed memory leak (buttons weren't being destroyed) - IconGetter: Will now successfully get "special" icons like for PDF files. Also fixed some issue with invalid wxIconLocation objects being created.
git-svn-id: https://appetizer.googlecode.com/svn@175 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/resources/resources_template.rc
+++ b/trunk/resources/resources_template.rc
@@ -23,7 +23,7 @@ BEGIN
             VALUE "CompanyName", "Appetizer Project\0"
             VALUE "FileDescription", "Appetizer\0"
             VALUE "FileVersion", "____VERSION____"
-            VALUE "InternalName", "Appetizer\0"
+            VALUE "InternalName", "MiniLaunchBar\0"
             VALUE "LegalCopyright", "Copyright (C) 2008 Laurent Cozic\0"
             VALUE "OriginalFilename", "Appetizer.exe\0"
             VALUE "ProductName", "Appetizer\0"
