- Fixed config dialog issues - TreeViewDialog: Dialog couldn't be closed by clicking on the cross button
git-svn-id: https://appetizer.googlecode.com/svn@176 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/GenerateHelp.vcproj
+++ b/trunk/GenerateHelp.vcproj
@@ -160,14 +160,13 @@
 		</Configuration>
 		<Configuration
 			Name="Unicode Debug|Win32"
-			OutputDirectory="$(SolutionDir)_$(ConfigurationName)"
-			IntermediateDirectory="_$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)_GenerateHelp"
+			IntermediateDirectory="_GenerateHelp"
 			ConfigurationType="1"
 			CharacterSet="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description=""
 				CommandLine=""
 			/>
 			<Tool
